refactor: 更新静态资源路径以使用新的资源目录结构，优化文档和图标引用

--- a/src/main/resources/web-static/doc.html
+++ b/src/main/resources/web-static/doc.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>API 文档 (内部离线版)</title>
-  <meta charset="utf-8"/>
-  <meta content="width=device-width, initial-scale=1" name="viewport">
-  <style>
-    body { margin: 0; padding: 0; }
-  </style>
-</head>
-<body>
-<redoc spec-url='/v3/api-docs'></redoc>
+  <head>
+    <title>API 文档 (内部离线版)</title>
+    <link rel="icon" type="image/x-icon" href="/static/favicon.ico" />
+    <link rel="icon" type="image/png" href="/static/favicon.ico" />
+    <meta charset="utf-8" />
+    <meta content="width=device-width, initial-scale=1" name="viewport" />
+    <style>
+      body {
+        margin: 0;
+        padding: 0;
+      }
+    </style>
+  </head>
+  <body>
+    <redoc spec-url="/v3/api-docs"></redoc>
 
-<script src="/redoc.standalone.js"></script>
-</body>
+    <script src="/static/redoc.standalone.js"></script>
+  </body>
 </html>
